fixed jumping issue on section navigation

--- a/src/pages/Section/Header/NavBar/NavBar.module.css
+++ b/src/pages/Section/Header/NavBar/NavBar.module.css
@@ -7,8 +7,8 @@
     z-index: 10;
     padding: 20px 0;
     transition: 0.3s ease;
-    width: 90%;
-    left: 50px;
+    width: 100%;
+    scroll-behavior: smooth;
 }
 
 ul,
